<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/matt_100"
    android:orientation="vertical"
    android:paddingStart="42dp"
    android:paddingTop="68dp"
    android:paddingEnd="42dp"
    tools:context=".fragments.PasswordFragment">

    <LinearLayout
        android:id="@+id/passwordProgressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="6dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.06"
            android:text="@string/password_page_welcome_label"
            android:textColor="@color/white"
            android:textSize="38sp"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>

        <ProgressBar
            android:id="@+id/passwordProgressBar"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="26dp"
            android:indeterminateTint="#E3BF5F"
            android:visibility="invisible">

        </ProgressBar>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordResetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingStart="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/password_page_forgot_password_prompt_txt"
            android:textColor="@color/white"
            android:textSize="15sp">

        </com.google.android.material.textview.MaterialTextView>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/passwordResetTxt"
            style="@style/SelectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/roboto"
            android:text="@string/passowrd_page_reset_txt"
            android:textColor="@color/blue_300"
            android:textSize="15sp"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>


    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordOutlinedTxt"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:boxBackgroundColor="@color/white_100"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeColor="@color/matt_100"
        app:boxStrokeWidth="0dp"
        app:endIconTint="@color/blue_300"
        app:endIconMode="password_toggle"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:textColor="@color/black">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/passwordErrorTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="textEnd"
        android:textColor="@color/olive_200">

    </com.google.android.material.textview.MaterialTextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/passwordLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="22dp"
        android:text="@string/password_page_login_btn_txt"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/olive_200"
        app:cornerRadius="8dp">

    </com.google.android.material.button.MaterialButton>


</LinearLayout>